<resources>
    <string name="app_name">Hi-Depok</string>
    <string name="tag_app_name">We Share We Care</string>
    <string name="sendPhoto">Photo Camera</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_picture_title">Get Photo From</string>
    <string name="sendPhotoGallery">Photo Gallery</string>
    <string name="sendLocation">Send Location</string>
    <string name="locationTo">Location To</string>
    <string name="fontReguler" translatable="false">font/Blogger_Sans.otf</string>
    <string name="fontBold" translatable="false">font/Blogger_Sans-Bold.otf</string>
    <string name="fontBoldItalic" translatable="false">font/Blogger_Sans-Bold_Italic.otf</string>
    <string name="fontItalic" translatable="false">font/Blogger_Sans-Italic.otf</string>
    <string name="fontLight" translatable="false">font/Blogger_Sans-Light.otf</string>
    <string name="fontLightItalic" translatable="false">font/Blogger_Sans-Light_Italic.otf</string>
    <string name="fontMedium" translatable="false">font/Blogger_Sans-Medium.otf</string>
    <string name="fontMediumItalic" translatable="false">font/Blogger_Sans-Medium_Italic.otf</string>
    <string name="spasi"> </string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="modul">Modul</string>
    <string name="sikepok">Sistem Kesehatan Depok</string>
    <string name="kadepok">Kasihi Depok</string>
    <string name="lapok">Lapor Depok</string>
    <string name="ucok">Usaha Kecil dan Menengah Depok</string>
    <string name="fokopok">Forum Komunitas Depok</string>
    <string name="kapok">Kenal Depok</string>
    <string name="desc">Deskripsi</string>
    <string name="button_next">Selanjutnya</string>
    <string name="video">Watch Video</string>
    <string name="copyright">© Copyright  2016 TiregDev</string>
    <string name="item_desc">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
        containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
        including versions of Lorem Ipsum.
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_more">More</string>
    <string name="item_title">Palais Garnier</string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SELANJUTNYA</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="slide_1_title">Hi-Depok</string>
    <string name="slide_1_desc">Aplikasi ini dapat membantu warga Depok dalam berbagai aspek dengan didukung oleh beberapa modul. Pelajari lebih lanjut!</string>
    <string name="slide_2_title">SIKEPOK</string>
    <string name="slide_2_desc">Sikepok atau Sistem informasi kesehatan Depok, merupakan modul yang membantu anda dalam aspek kesehatan</string>
    <string name="slide_3_title">KADEPOK</string>
    <string name="slide_3_desc">KaDepok atau Kasihi Depok, merupakan modul yang mengajak anda untuk berbagai kepada seluruh panti asuhan yang ada di Depok</string>
    <string name="slide_4_title">LAPOK</string>
    <string name="slide_4_desc">Lapok atau Lapor Depok, merupakan modul yang dapat membantu anda untuk melaporkan kejadian yang ada disekitar anda untuk dapat diproses lebih lanjut</string>
    <string name="slide_5_title">KAPOK</string>
    <string name="slide_5_desc">KAPOK atau Kenal Depok, merupakan modul yang membantu anda untuk menemukan berbagai macam tempat yang ada di kota Depok </string>
    <string name="slide_6_title">UCOK</string>
    <string name="slide_6_desc">Ucok atau Usaha Mikro, Kecil, dan Menengah Depok, merupakan modul yang dapat membantu anda untuk menemukan UMKM dan membantu anda untuk menjadi agen usaha </string>
    <string name="slide_7_title">FOKOPOK</string>
    <string name="slide_7_desc">Fokopok atau Forum Komunitas Depok, merupakan modul yang dapat membantu anda menemukan, berkomunikasi, dan berbagi berbagai macam informasi dari seluruh komunitas yang ada di Depok</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="rs_terdekat_text">Halaman Dua Berhasil</string>
    <string name="jarak1">5m</string>
    <string name="namaRS">RS Mitra Keluarga</string>
    <string name="alamat">Jl. Merdeka No.2</string>
    <string name="title_activity_menu_rs">menu_rs</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="deskripsi_rs">RS Mitra Keluarga Depok adalah rumah sakit swasta kelas B. Rumah sakit ini mampu memberikan pelayanan kedokteran spesialis dan subspesialis terbatas. Rumah sakit ini juga menampung pelayanan rujukan dari rumah sakit kabupaten. Tempat ini tersedia 144 tempat tidur inap dengan 27 tempat tidur VIP.  </string>
    <string name="no_telp">085776410909</string>
    <string name="web">mitrakeluarga.com/depok/</string>
    <string name="email">mitrakeluarga@gmail.com</string>
    <string name="alamat_desc">Jl. Merdeka No.2</string>
    <string name="link">Link to G-Maps</string>
    <string-array name="jadwal">
        <item name="Spesialisasi">-Pilih Spesialisasi-</item>
        <item name="THT">Spesialis THT</item>
        <item name="Bedah">Spesialis Bedah</item>
        <item name="Saraf">Spesialis Saraf</item>
    </string-array>
    <string name="namaDokter">Dr. Febby Haryono</string>
    <string name="spesialis">Spesialis Anak \nSpesialis THT</string>
    <string name="emailDokter">dokterfebby@gmail.com</string>
    <string name="alamatDokter">Jl. Perumahan Dokter</string>
    <string name="noHPdokter">085712345678</string>
    <string name="praktekDokter">Senin : 08.00 - 11.00 \nRabu 13.00 - 16.00 \nKamis 08.00 - 11.00</string>
    <string name="namaApotek">Apotek Roxy</string>
    <string name="namaKlinik">Klinik Medica</string>
    <string name="jamBuka">09.00 - 21.00 WIB</string>
    <string-array name="jenis_kelamin">
        <item name="">- Pilih jenis kelamin-</item>
        <item name="L">Laki-laki</item>
        <item name="P">Perempuan</item>
    </string-array>
    <string-array name="poli">
        <item name="">-Pilih Poli-</item>
        <item name="DAL-KAHAR">Poli Penyakit Dalam - Dr. Kahar</item>
        <item name="DAL-DESI">Poli Penyakit Dalam - Dr. Desi</item>
        <item name="ANA-DIPARI">Poli Anak - Dr. Dipari</item>
        <item name="ANA-HARRY">Poli Anak - Dr. Harry</item>
        <item name="ANA-INDRA">Poli Anak - Dr. Indra</item>
        <item name="ANA-SISWANTO">Poli Anak - Dr. Siswanto</item>
        <item name="PSI-DIANA">Poli Psikiatri - Dr. Diana</item>
        <item name="SAR-AGUS">Poli Saraf/Neurologi - Dr. Agus</item>
        <item name="MAT-LIESKA">Poli Mata - Dr. Lieska</item>
        <item name="PAR-SHERLY">Poli Paru - Dr. Sherly</item>
        <item name="ANE-AMELIA">Poli Anestesi - Dr. Amelia</item>
        <item name="ANE-UJANG">Poli Anestesi - Dr. Ujang</item>
        <item name="BED-ABU">Poli Bedah - Dr. Abu</item>
        <item name="BED-HENRU">Poli Bedah - Dr. Henru</item>
        <item name="KAN-BAGUS">Poli Kebidanan dan Kandungan - Dr. Bagus</item>
        <item name="KAN-PATMA">Poli Kebidanan dan Kandungan - Dr. Patma</item>
        <item name="THT-CAROLINE">Poli THT - Dr. Caroline</item>
        <item name="GIG-SIGIT">Poli Gigi dan Bedah Mulu - Dr. Sigit</item>
        <item name="GIG-DARMA">Poli Gigi dan Bedah Mulu - Dr. Darma</item>
        <item name="CST-KURNIA">Poli CST - Dr. Kurnia</item>
        <item name="VCT-KURNIA">Poli VCT - Dr. Kurnia</item>
    </string-array>
    <string-array name="dokterDAL">
        <item name="">-Pilih Dokter-</item>
        <item name="KAHAR">Dr. Kahar</item>
        <item name="DESI">Dr. Desi</item>
    </string-array>
    <string-array name="dokterANA">
        <item name="">-Pilih Dokter-</item>
        <item name="DIAPARI">Dr. Diapari</item>
        <item name="HARRY">Dr. Harry</item>
        <item name="INDRA">Dr. Indra</item>
        <item name="SISWANTO">Dr. Siswanto</item>
    </string-array>
    <string-array name="dokterPSI">
        <item name="">-Pilih Dokter-</item>
        <item name="DIANA">Dr. Diana</item>
    </string-array>
    <string-array name="dokterSAR">
        <item name="">-Pilih Dokter-</item>
        <item name="AGUS">Dr. Agus</item>
    </string-array>
    <string-array name="dokterKUL">
        <item name="">-Pilih Dokter-</item>
        <item name="MUNIRA">Dr. Munira</item>
    </string-array>
    <string name="ketentuan1">Registrasi dapat dilakukan setiap saat dan hanya 1 kali (1 No.HP berlaku untuk 1 pasien) </string>
    <string name="ketentuan2">Setelah pasien melakukan registrasi akan mendapatkan SMS balasan konfirmasi, jika belum mendapat SMS balasan mohon cek kembali format pengetikan SMS  </string>
    <string name="ketentuan3">Pendaftaran poli rawat jalan dilakukan pukul 03.00 s/d 06.00 pada hari pasien akan berobat    </string>
    <string name="ketentuan4">Pasien yang belum memiliki KTP, dapat mengetik 123 pada kode NIK  </string>
    <string name="ketentuan5">Kolom tanggal lahir diisi: tanggal 2 digit/ bulan 2 digit/ tahun 4 digit      </string>
    <string name="ketentuan6">No. RM adalah nomor yang tertera pada kartu berobat yang terdiri dari 6 digit, bila pasien tidak mengetahui nomor rekam medis maka No.RM diisi 0 </string>
    <string name="ketentuan7">Pasien daftar ulang kembali di loket pendaftaran RSUD Kota Depok pada waktu yang telah ditetapkan dalam balasan SMS</string>
    <string name="judul_post">Oralit untuk diare</string>
    <string name="isi_post">Oralit adalah larutan gula garam yang merupakan salah satu solusi untuk diare. sebagai obat alternatif yang dapat dibuat oleh sapa saja. Membuatnya pun sangat mudah. hanya dengan mencampurkan gula dan garam dengan takaran yang cocok lalu diberi air hangat.</string>
    <string name="like">7</string>
    <string name="komen">2</string>
    <string name="sikepok_frag2">Sistem Informasi RS Depok</string>
</resources>