<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_slider_screen5">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <fr.arnaudguyon.smartfontslib.FontTextView
            app:font="@string/fontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_5_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:layout_marginBottom="@dimen/slide_title" />

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            app:srcCompat="@drawable/kapok2" />
        <fr.arnaudguyon.smartfontslib.FontTextView
            app:font="@string/fontReguler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_5_desc"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />
    </LinearLayout>
</RelativeLayout>