<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profil_user_komentar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/profile"
            android:layout_marginStart="10dp"/>

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/namaUser_Post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profil_user_komentar"
            android:layout_marginStart="10dp"
            app:font="@string/fontBold"
            android:text="@string/spasi" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/isiKomentarUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/namaUser_Post"
            android:layout_toEndOf="@id/profil_user_komentar"
            android:layout_marginStart="10dp"
            app:font="@string/fontReguler"
            android:text="@string/spasi" />

</RelativeLayout>