<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape4"
        android:onClick="ke_menu_rs"
        android:orientation="horizontal"
        android:padding="5dp"
        android:textColor="#b7b7b7">

        <ImageView
            android:id="@+id/gambarRS"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/rskeluarga" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            app:font="@string/fontBold"
            android:textColor="@color/white"
            android:id="@+id/namaRS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/gambarRS"
            android:text="@string/namaRS" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            app:font="@string/fontReguler"
            android:textColor="@color/white"
            android:id="@+id/alamatRS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/namaRS"
            android:layout_toEndOf="@+id/gambarRS"
            android:text="@string/alamat" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/white_car" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <fr.arnaudguyon.smartfontslib.FontTextView
                    app:font="@string/fontBold"
                    android:textColor="@color/white"
                    android:id="@+id/jarak1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jarak1" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>