<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <fr.arnaudguyon.smartfontslib.FontTextView
            app:font="@string/fontReguler"
            android:text="@string/sikepok_frag2"
            android:layout_marginStart="8dp"
            android:textColor="#b7b7b7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/diagnosa" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="7dp">

        <WebView
            android:id="@+id/textContent"
            android:background="@android:color/transparent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal">

        <fr.arnaudguyon.smartfontslib.FontButton
            app:font="@string/fontReguler"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:gravity="center"
            android:alpha="0.7"
            android:background="@drawable/shape2"
            android:text="@string/button_next"
            android:onClick="rumah_sakit"
            android:textColor="#fff" />

    </RelativeLayout>

</LinearLayout>