<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape4"
        android:onClick="ke_detail_post_saya"
        android:orientation="vertical">

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/judul_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/judul_post"
            android:textColor="@color/white"
            android:textSize="@dimen/article_desc"
            app:font="@string/fontBold" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/isi_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/isi_post"
            android:textColor="@color/white"
            app:font="@string/fontReguler" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left">

                <Button
                    android:id="@+id/hapus"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape3"
                    android:gravity="center"
                    android:text="Hapus"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <fr.arnaudguyon.smartfontslib.FontTextView
                    android:id="@+id/angka_like"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:text="@string/like"
                    android:textColor="#fff"
                    app:font="@string/fontReguler" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left">

                    <ImageView
                        android:id="@+id/like"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        app:srcCompat="@drawable/icon_thump_up" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <fr.arnaudguyon.smartfontslib.FontTextView
                    android:id="@+id/angka_komen"
                    app:font="@string/fontReguler"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:text="@string/komen" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left">

                    <ImageView
                        android:id="@+id/komen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        app:srcCompat="@drawable/icon_comment" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>